# AlgorithmsAndDatastructures

./: .gitignore  README.md
Week-11/: Binary trees.md
Week-11/binary_search_trees/: CMakeLists.txt  README.md  bintree.cpp  bintree.h  bintree_node.cpp  bintree_node.h  bintree_node_tester.cpp  bintree_node_tester.h  bintree_tester.cpp  bintree_tester.h  bintree_writer.cpp  bintree_writer.h  main.cpp
Week-12/: Balanced Binary trees.md
Week-12/balanced_bsts/: CMakeLists.txt  README.md  bintree.cpp  bintree.h  bintree_node.cpp  bintree_node.h  bintree_node_tester.cpp  bintree_node_tester.h  bintree_tester.cpp  bintree_tester.h  bintree_writer.cpp  main.cpp  numbers1.txt
Week-13/: Heaps.md
Week-13/heaps/: CMakeLists.txt  heap_tester.cpp  heap_tester.h  main.cpp  maxheap.cpp  maxheap.h  task.cpp  task.h
Week-14/: Graphs.md
Week-14/graphs/: CMakeLists.txt  README.md  colours.h  dot_writer.cpp  dot_writer.h  graph.cpp  graph.h  main.cpp  topological_sort.cpp  topological_sort.h  traversal_tester.cpp  traversal_tester.h  visitor.cpp  visitor.h
Week-14/graphs/graphs/: act3.graph  act4.dot  act4.graph  act5.graph  act6.dot  act9.dot  large_acyclic.graph  large_cyclic.dot  large_cyclic.graph
Week-15/: Shortestpaths.md
Week-15/shortestpaths/: CMakeLists.txt  colours.cpp  dijkstra_heap.cpp  dijkstra_heap.h  dijkstra_simple.cpp  dijkstra_simple.h  dot_writer.cpp  dot_writer.h  graph.cpp  graph.h  main.cpp  relaxer.cpp  relaxer.h  shortest_paths.cpp  shortest_paths.h  shortest_paths_tester.cpp  shortest_paths_tester.h  sp_dfs.cpp  sp_dfs.h  topological_sort.cpp  topological_sort.h  vertex_heap.cpp  vertex_heap.h
Week-15/shortestpaths/graphs/: activity2.graph  activity5.graph  activity6.graph  activity8.graph  negative.graph  test_topsort-2.graph
Week1/: Week 1 Logbook.md
Week1/Activities/: Assignment1  Assignment1.c  Assignment2  Assignment2.c  Assignment3.c  Assignment4.c  Assignment5.c  Assignment6  Assignment6.c  Assignment7  Assignment7.c  Assignment8  Assignment8.c  Assignment9.c
Week1/Activity10/: CMakeLists.txt  main.c
Week2/: Week 2 Dynamic Arrays.md
Week2/Activities/: Assignment1  Assignment1.c  Assignment11  Assignment11.c  Assignment2  Assignment2.c  Assignment3  Assignment3.c  Assignment4  Assignment4.c  Assignment5.c  Assignment6  Assignment6.c  Assignment7  Assignment7.c  Assignment8  Assignment8.c  Assignment9  ass3  ass31
Week2/Activity10/: main  main.c
Week4/: Week 4 - Stacks and Queues.md
Week4/week4/: CMakeLists.txt
Week4/week4/circular-buffer/: CMakeLists.txt  buffer.c  buffer.h  circular-buffer.c  test_buffer.c  test_buffer.h
Week4/week4/include/week4lib/: array_of_int.h  list_of_char.h  utils.h
Week4/week4/queues/: CMakeLists.txt  deque.c  deque.h  queues.c
Week4/week4/stacks/: CMakeLists.txt  stacks.c
Week4/week4/week4lib/: CMakeLists.txt  week4lib.c
Week5/: Sorting.md
Week5/sorting-code/: CMakeLists.txt  README.md
Week5/sorting-code/include/sortinglib/: array.h  list.h
Week5/sorting-code/merge_sort/: CMakeLists.txt  main.c  merge_sort.c  merge_sort.h  test_merge_sort.c  test_merge_sort.h
Week5/sorting-code/selection_sort/: CMakeLists.txt  main.c  selection_sort.c  selection_sort.h  test_selection_sort.c  test_selection_sort.h
Week5/sorting-code/sortinglib/: CMakeLists.txt  array.c  list.c
Week6/: Sets.md
Week6/sets/: CMakeLists.txt  README.md  intro.c
Week6/sets/sets_sorted/: CMakeLists.txt  set.c  set.h  sets_sorted.c  test_set.c  test_set.h
Week6/sets/sets_unsorted/: CMakeLists.txt  set.c  set.h  sets_unsorted.c  test_set.c  test_set.h
Week6/sets/shared/: set.c
Week7/: Dictionaries.md
Week7/dictionaries/: CMakeLists.txt  README.md  alice3.txt
Week7/dictionaries/letter_counter/: CMakeLists.txt  langugage_recognizer.c  langugage_recognizer.h  letter_counter.c  letter_counter.h  main_letters.c
Week7/dictionaries/word_counter/: CMakeLists.txt  binsearch.c  binsearch.h  counter.c  counter.h  generic_functions.c  pair.c  pair.h  test_counter.c  test_counter.h  test_main.c  word_counter.c
Week8/: Hashing.md
Week8/hashing/: CMakeLists.txt  hashmap.c  hashmap.h  hashmapfunctions.c  hashmapfunctions.h  list.c  list.h  main.c  pair.c  pair.h  statistics.c  statistics.h  test_hashmap.c  test_hashmap.h  test_main.c
week3/: Week 3 Linked Lists.md
week3/week3-linked-lists/: CMakeLists.txt  README.md
week3/week3-linked-lists/doubly_linked/: CMakeLists.txt  list.c  list.h  main.c  test_list.c  test_list.h
week3/week3-linked-lists/singly_linked/: CMakeLists.txt  list.c  list.h  main.c  test_list.c  test_list.h
